I think i fixed greetings alignment

--- a/About/about.css
+++ b/About/about.css
@@ -25,7 +25,7 @@ _______________*/
     border: #a5b5b4;
     padding: 30px;
     font-style: oblique;
-    margin: 100px 720px;
+    margin: 10px 710px;
 }
 
 /*________
